<resources>
    <string name="app_name">Moddy</string>
    <string name="action_settings">Settings</string>
    <string name="description">Our most popular menu as well as traditional cuisine, has evolved over the years, including some modern and innovative presentation. We reward your customer base print consistency and out of this year\'s volunteer year in the taste genuine Korea\'s authentic, our talented and experienced ready to cook lovingly, and by the Audit years of loyalty to request their Korean Dragon team to serve.</string>
    <string name="name">Noodle Salad</string>
    <string name="unit">Won</string>
    <string name="loading">Loading ...</string>
    <string name="version">Version 1.0</string>
    <string name="name_person">Minh Duc</string>
    <string name="copyright">Copyright\u00a9 2016 ACE Company</string>
    <string name="title_activity_login"></string>
    <string name="or">or</string>
</resources>
