<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <ImageView
        android:layout_above="@+id/textVersion"
        android:contentDescription="@string/unit"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/moddy"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:id="@+id/textVersion"
        android:layout_gravity="center_vertical"
        android:layout_centerInParent="true"
        android:textSize="@dimen/text_small"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"/>

    <LinearLayout
        android:layout_above="@+id/textCopyright"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleSmallTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:visibility="visible" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/text_small"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"/>
    </LinearLayout>
    <TextView
        android:id="@+id/textCopyright"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/copyright"/>
</RelativeLayout>